# Payment-Recognition

./: README.md
.dvc/: config
.github/workflows/: data.yml  model.yml
payment-recognition/: .env  README.md  data.dvc  models.dvc  pyproject.toml
payment-recognition/data/clean/: cleaned_data.csv  test_data.csv  train_data.csv
payment-recognition/data/preprocessed/: clean_data.csv  initial_preprocessed_data.csv  preprocessed_data.csv
payment-recognition/data/raw/: generated_data.csv  initial_data.csv
payment-recognition/data/scaler_params/: label_encoders.joblib
payment-recognition/data/validate/: reference_data.csv
payment-recognition/gx/: great_expectations.yml
payment-recognition/gx/checkpoints/: payment-recognition.yml
payment-recognition/gx/expectations/: .ge_store_backend_id  Recognition.json  automated-recognition.json  payment-recognition.json
payment-recognition/models/: dt.joblib  model.onnx
payment-recognition/notebooks/: example.ipynb  neural_network.ipynb  parameters.ipynb  trees.ipynb
payment-recognition/reports/: data_quality.html
payment-recognition/scripts/: clean_data.py  generate_data.py  initial_data.py  initial_preprocess_data.py  preprocess_incoming_data.py  validate_data.py
payment-recognition/scripts/model/: test_model.py  train_model.py  validate_classification.py  validate_model.py
