[tool.poetry]
name = "payment-recognition"
version = "0.1.0"
description = ""
authors = ["buju4e <bojan.petrovski@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
evidently = "^0.4.25"
great-expectations = "^0.18.15"
mlflow = "^2.13.1"
dagshub = "^0.3.27"
transformers = "^4.41.2"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"

[tool.poe.tasks.test]
description = "Run tests with coverage"
command = "pytest --cov=my_app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
